New game and export to .js working again

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 				<li><h2>Options</h2>
 					<ul>
 						<li><a id="newGame" href="#">New game</a></li>
-						<li><a id="loadGame" href="#">Load game</a></li>
-						<li><a id="exportGame" href="#">Export to html</a></li>
+						<li><a id="exportGame" href="#">Export to .js</a></li>
 					</ul>
 				</li>
 			</ul>
