Load game working

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<li><h2>Options</h2>
 					<ul>
 						<li><a id="newGame" href="#">New game</a></li>
+						<li><a id="loadGame" href="#">Load game</a></li>
 						<li><a id="exportGame" href="#">Export to .js</a></li>
 					</ul>
 				</li>
@@ -58,6 +59,11 @@
 		<div id="exportHtml">
 			<a id="hideHtml" href="#">Hide Html</a>
 			<textarea id="pageOutput" rows="30"></textarea>
+		</div>
+		
+		<div id="loadGameCodeDiv">
+			<textarea id="codeToLoad" rows="30"></textarea>
+			<a id="loadCode" href="#">Load</a>
 		</div>
 		
 		<canvas id="gameCanvas" width="500" height="300">
