Remmoving broken export

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<ul>
 						<li><a id="newGame" href="#">New game</a></li>
 						<li><a id="loadGame" href="#">Load game</a></li>
-						<li><a id="exportGame" href="#">Export to .js</a></li>
+						<!--<li><a id="exportGame" href="#">Export to .js</a></li>-->
 					</ul>
 				</li>
 			</ul>
