#18 Renamed "Restart and pause" to "Edit level"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<ul>
 						<li><a id="gameRestart" href="#">Restart</a></li>
 						<li><a id="gamePause" href="#">Pause</a></li>
-						<li><a id="gameRestartPause" href="#">Restart and pause</a></li>
+						<li><a id="gameRestartPause" href="#">Edit level</a></li>
 					</ul>
 				</li>
 			</ul>
