#18 Added global edit mode to cangatoo, now edit enters edit mode but pause don't. It is still possible to add objects on a paused game.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 			<ul>
 				<li><h2>Game flow</h2>
 					<ul>
-						<li><a id="gameRestart" href="#">Restart</a></li>
+						<li><a id="gameRestartLevel" href="#">Restart level</a></li>
+						<!--<li><a id="gameRestart" href="#">Restart game</a></li>-->
 						<li><a id="gamePause" href="#">Pause</a></li>
-						<li><a id="gameRestartPause" href="#">Edit level</a></li>
+						<li><a id="gameEdit" href="#">Edit level</a></li>
 					</ul>
 				</li>
 			</ul>
