#38 game state indicator

--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 		</div>
 		
 		<canvas id="gameCanvas" width="500" height="300">
-			<p>Your browser does not support the canvas element.</p>
+			<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
 		</canvas>
-				
+		<div id="gameState"></div>		
+		
 		<div id="gameEditor">
 			<ul id="tabLinks">
 				<!-- 
