Making cangatoo not dependent of the html, part 1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 	<head>
 		<title>Cangatoo - Canvas game Tool</title>
 		<script src="./lib/jquery-1.6.4.js"></script>
-		<script type="text/javascript" src="Cangatoo.js"></script>		
+		
+		<script type="text/javascript" src="./CangatooEditor/Cangatoo.js"></script>
+				
 		<link rel="stylesheet" type="text/css" href="./defaultSkin.css" />
 		
 		<script type="text/javascript">
