--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 	<head>
 		<title>Cangatoo - Canvas game Tool</title>
 		<script src="./lib/jquery-1.6.4.js"></script>
+		<script src="./lib/dom-drag.js"></script><!-- http://www.dynamicdrive.com/dynamicindex11/domdrag/ -->
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+var theHandle = document.getElementById("handle");
+var theRoot = document.getElementById("root");
+console.log(theHandle);
+if(theHandle == null || theRoot == null)
+throw new "fvsgvbhfs";
+Drag.init(theHandle, theRoot);
+});
+
+
+</script>
 		
 		<script type="text/javascript" src="./CangatooEditor/CangatooBoot.js"></script>
 				
@@ -24,6 +39,12 @@
 	</head>
 	<body>
 <a href="https://github.com/beothorn/Cangatoo"><img style="position: absolute; top: -18; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
+
+<div id="root" style="left:50px; top:50px;float: left;position:absolute;">
+<div id="handle">Handle</div>
+Some text
+</div>
+
 	<div id="menuCentering">
 		<div id="menu">
 			<ul>
