Changed folder structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ $(document).ready(function() {
 
 </script>
 		
-		<script type="text/javascript" src="./CangatooEditor/CangatooBoot.js"></script>
+		<script type="text/javascript" src="./Boot/CangatooBoot.js"></script>
 				
 		<link rel="stylesheet" type="text/css" href="./defaultSkin.css" />
 		
