Fixed 2 bugs: one on export and the other on the about window

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 	</div>
 
 	<div id="helpAboutText">
-		<a id="hideHelpAbout" href="#">Hide About</a>
-		<p id="help">Cangatoo is a event oriented game editor. Its goal is to be an easy to use tool to create
-		simple 2d games using the power of html5 canvas. There is still a lot of things to be done on Cangatoo,
-		this is just the very beginning of the project.</p>
+		Cangatoo is a event oriented game editor.<br> 
+		Its goal is to be an easy to use tool to create<br>
+		simple 2d games using the power of html5 canvas.<br>
+		There is still a lot of things to be done on Cangatoo,<br>
+		this is just the very beginning of the project.
 	</div>
 
 	<div id="exportHtml">
-		<a id="hideHtml" href="#">Hide Html</a>
 		<textarea id="pageOutput" rows="30"></textarea>
 	</div>
 	
