--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 	<a href="https://github.com/beothorn/Cangatoo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 
-	<div id="menu">
+	<div id="menu" class="window" style="left: 6px; top: 6px;">
 		<ul>
 			<li>Options
 				<ul>
@@ -65,7 +65,7 @@
 		</ul>
 	</div>
 
-	<div id="helpAboutText">
+	<div id="helpAboutText" class="windowHidden" style="left: 100px; top: 100px;">
 		Cangatoo is a event oriented game editor.<br> 
 		Its goal is to be an easy to use tool to create<br>
 		simple 2d games using the power of html5 canvas.<br>
@@ -73,64 +73,68 @@
 		this is just the very beginning of the project.
 	</div>
 
-	<div id="exportHtml">
+	<div id="exportHtml" class="windowHidden" style="left: 100px; top: 100px;">
 		<textarea id="pageOutput" rows="30"></textarea>
 	</div>
 	
-	<div id="loadGameCodeDiv">
+	<div id="loadGameCodeDiv" class="windowHidden" style="left: 100px; top: 100px;">
 		<textarea id="codeToLoad" rows="30"></textarea>
 		<a id="loadCode" href="#">Load</a>
 	</div>
 		
-	<canvas id="gameCanvas" width="500" height="300">
+	<canvas id="gameCanvas" class="window" style="left: 496px; top: 89px;" width="500" height="300">
 		<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
 	</canvas>
 
 	<div id="gameState"></div>		
 		
 		
-	<div id="factoriesTab" class="tabContent">
-		<table id="ElementFacoryEditor" border ="0">
-			<tr>
-				<td id="editorFirstCol">
-					<input type="text" id="searchOrAddFactory" value="NewElementFactory"/>
-				</td>
-				<td>
-					<select id="factoryEvents" ></select>
-					<input type="button" id="saveFactoryCode" value="save"/>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<select id="factories" size="2"></select>
-				</td>
-				<td>
-					<textarea id="factoryCodeEditor"></textarea>
-				</td>
-			</tr>
-		</table>
+	<div id="factoriesTab" class="windowHidden" style="left: 6px; top: 482px;" >
+		<div class="tabContent">
+			<table id="ElementFacoryEditor" border ="0">
+				<tr>
+					<td id="editorFirstCol">
+						<input type="text" id="searchOrAddFactory" value="NewElementFactory"/>
+					</td>
+					<td>
+						<select id="factoryEvents" ></select>
+						<input type="button" id="saveFactoryCode" value="save"/>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<select id="factories" size="2"></select>
+					</td>
+					<td>
+						<textarea id="factoryCodeEditor"></textarea>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 		
-	<div id="levelsTab" class="tabContent">
-		<table id="LevelEditor" border ="0">
-			<tr>
-				<td id="editorFirstCol">
-					<input type="text" id="searchOrAddLevel" value="NewLevel"/>
-				</td>
-				<td>
-					<select id="levelEvents" ></select>
-					<input type="button" id="saveLevelCode" value="save"/>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<select id="levels" size="2"></select>
-				</td>
-				<td>
-					<textarea id="levelCodeEditor"></textarea>
-				</td>
-			</tr>
-		</table>
+	<div id="levelsTab" class="windowHidden" style="left: 969px; top: 482px;">
+		<div class="tabContent">
+			<table id="LevelEditor" border ="0" >
+				<tr>
+					<td id="editorFirstCol">
+						<input type="text" id="searchOrAddLevel" value="NewLevel"/>
+					</td>
+					<td>
+						<select id="levelEvents" ></select>
+						<input type="button" id="saveLevelCode" value="save"/>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<select id="levels" size="2"></select>
+					</td>
+					<td>
+						<textarea id="levelCodeEditor"></textarea>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 				
 	</body>
