--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 	<a href="https://github.com/beothorn/Cangatoo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 
-	<div id="menu" class="window" style="left: 6px; top: 6px;">
+	<div id="Menu" class="window" style="left: 6px; top: 6px;">
 		<ul>
 			<li>Options
 				<ul>
@@ -49,23 +49,12 @@
 		</ul>
 		<ul>
 			<li>View
-				<ul>
-					<li><a id="" href="#">&#10003; Canvas</a></li>
-					<li><a id="" href="#">&#10003; Level editor</a></li>
-					<li><a id="" href="#">&#10003; Factory editor</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul>
-			<li>Help
-				<ul>
-					<li><a id="helpAbout" href="#">About</a></li>
-				</ul>
+				<ul id="visibilityMenu"></ul>
 			</li>
 		</ul>
 	</div>
 
-	<div id="helpAboutText" class="windowHidden" style="left: 100px; top: 100px;">
+	<div id="About" class="windowHidden" style="left: 100px; top: 100px;">
 		Cangatoo is a event oriented game editor.<br> 
 		Its goal is to be an easy to use tool to create<br>
 		simple 2d games using the power of html5 canvas.<br>
@@ -73,7 +62,7 @@
 		this is just the very beginning of the project.
 	</div>
 
-	<div id="exportHtml" class="windowHidden" style="left: 100px; top: 100px;">
+	<div id="Exported_javascript" class="windowHidden" style="left: 100px; top: 100px;">
 		<textarea id="pageOutput" rows="30"></textarea>
 	</div>
 	
