--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 	<a href="https://github.com/beothorn/Cangatoo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
 
-	<div id="Menu" class="window" style="left: 6px; top: 6px;">
+	<div id="Menu" class="windowDialog" style="left: 6px; top: 6px;">
 		<ul>
 			<li>Options
 				<ul>
@@ -66,19 +66,19 @@
 		<textarea id="pageOutput" rows="30"></textarea>
 	</div>
 	
-	<div id="loadGameCodeDiv" class="windowHidden" style="left: 100px; top: 100px;">
+	<div id="Load_game_window" class="windowHidden" style="left: 100px; top: 100px;">
 		<textarea id="codeToLoad" rows="30"></textarea>
 		<a id="loadCode" href="#">Load</a>
 	</div>
 		
-	<canvas id="gameCanvas" class="window" style="left: 496px; top: 89px;" width="500" height="300">
+	<canvas id="Canvas" class="window" style="left: 496px; top: 89px;" width="500" height="300">
 		<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
 	</canvas>
 
 	<div id="gameState"></div>		
 		
 		
-	<div id="factoriesTab" class="windowHidden" style="left: 6px; top: 482px;" >
+	<div id="Factories_editor" class="windowHidden" style="left: 6px; top: 482px;" >
 		<div class="tabContent">
 			<table id="ElementFacoryEditor" border ="0">
 				<tr>
@@ -102,7 +102,7 @@
 		</div>
 	</div>
 		
-	<div id="levelsTab" class="windowHidden" style="left: 969px; top: 482px;">
+	<div id="Levels_editor" class="windowHidden" style="left: 969px; top: 482px;">
 		<div class="tabContent">
 			<table id="LevelEditor" border ="0" >
 				<tr>
