Menu is not mutable now

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
 		</ul>
 		<ul>
 			<li>View
-				<ul id="visibilityMenu"></ul>
+				<ul>
+					<li><a onclick="showWindow('Canvas')">Canvas</a></li>
+					<li><a onclick="showWindow('Factories_editor')">Factories editor</a></li>
+					<li><a onclick="showWindow('Levels_editor')">Levels editor</a></li>
+					<li><a onclick="showWindow('Exported_javascript')">Export javascript</a></li>
+					<li><a onclick="showWindow('Load_game_window')">Code execution window</a></li>
+					<li><a onclick="showWindow('About')">About</a></li>
+				</ul>
 			</li>
 		</ul>
 	</div>
