Added execute code window

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 	
 	<div id="Load_game_window" class="windowHidden" title="Add code to be loaded here" style="left: 100px; top: 100px;">
 		<textarea id="codeToLoad" rows="30"></textarea>
-		<a id="loadCode" href="#">Load</a>
+		<a id="loadCode" href="#">Load and restart</a>
+		<a id="executeCode" href="#">Execute</a>
 	</div>
 		
 	<canvas id="Canvas" class="window" title="Canvas" style="left: 496px; top: 89px;" width="500" height="300">
