Fixed title bar bug and begun game fow control with radio button

--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
 		<input type="button" id="clearConsole" value="Clear"/>
 	</div>
 		
-	<canvas id="Canvas" class="window" title="Canvas" style="left: 496px; top: 89px;" width="500" height="300">
-		<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
-	</canvas>
+	<div id="CanvasWindow" class="window" title="Canvas" style="background:#FFFFFF;left: 496px; top: 89px;">
+		<input type="radio" name="gameFlow" id="r-yes" />Play</label>
+		<input type="radio" name="gameFlow" id="r-no" />Pause</label>
+		<input type="radio" name="gameFlow" id="r-dunno" />Edit</label>
+		<canvas id="Canvas" width="500" height="300">
+			<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
+		</canvas>
+	</div>
 
 	<div id="gameState"></div>		
 		
