--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Cangatoo - Canvas game Tool</title>
 		
-		<script src="./lib/jquery-1.6.4.js"></script>
+		<script src="./lib/jquery-1.7.2.min.js"></script>
 		<script src="./lib/dom-drag.js"></script><!-- http://www.dynamicdrive.com/dynamicindex11/domdrag/ -->		
 		<script type="text/javascript" src="./Boot/CangatooBoot.js"></script>
 				
