Game flow is now on the canvas window

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 		<ul>
 			<li>Game flow
 				<ul>
-					<li><a id="gameRestartLevel" href="#">Restart level</a></li>
-					<!--<li><a id="gameRestart" href="#">Restart game</a></li>-->
-					<li><a id="gamePause" href="#">Pause</a></li>
 					<li><a id="gameEdit" href="#">Edit level</a></li>
 				</ul>
 			</li>
@@ -91,7 +88,7 @@
 		&nbsp;Go to level:
 		<select id="levelGoto"></select>
 		<canvas id="Canvas" width="500" height="300">
-			<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox!</p>
+			<p>Your browser does not support the canvas element, this is supposed to be a canvas game editor so get the latest firefox or chrome!</p>
 		</canvas>
 	</div>
 
