--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 		</ul>
 	</div>
 
-	<div id="About" class="windowHidden" title="About" style="left: 100px; top: 100px;">
-		Cangatoo is a event oriented game editor.<br> 
-		Its goal is to be an easy to use tool to create<br>
+	<div id="About" class="windowHidden" title="About" style="background:#FFFFFF;left: 100px; top: 100px;">
+		Cangatoo is an event oriented game editor.<br> 
+		It's goal is to be an easy to use tool to create<br>
 		simple 2d games using the power of html5 canvas.<br>
 		There is still a lot of things to be done on Cangatoo,<br>
 		this is just the very beginning of the project.
 	</div>
 
-	<div id="Exported_javascript" class="windowHidden" title="Exported js" style="left: 100px; top: 100px;">
+	<div id="Exported_javascript" class="windowHidden" title="Exported js" style="background:#FFFFFF;left: 100px; top: 100px;">
 		<textarea id="pageOutput" rows="30"></textarea>
 	</div>
 	
-	<div id="Load_game_window" class="windowHidden" title="Add code to be loaded here" style="left: 100px; top: 100px;">
+	<div id="Load_game_window" class="windowHidden" title="Add code to be loaded here" style="background:#FFFFFF;left: 100px; top: 100px;">
 		<textarea id="codeToLoad" rows="30">Write code or add game code to loade here. example: println("Hello world");</textarea>
 		<br>
 		<input type="button" id="loadCode" value="Load as new game"/>
