Factories_editor showing by default

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<div id="gameState"></div>		
 		
 		
-	<div id="Factories_editor" class="windowHidden" title="Factories editor" style="left: 6px; top: 377px;" data-x="6px" data-y="377px" >
+	<div id="Factories_editor" class="window" title="Factories editor" style="left: 6px; top: 377px;" data-x="6px" data-y="377px" >
 		<div class="tabContent">
 			<table id="ElementFacoryEditor" border ="0">
 				<tr>
