Fixed Export on debug mode

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 		<script type="text/javascript" src="./CangatooEditor/Cangatoo.js"></script>
 		<script type="text/javascript" src="./WebEditor/Bindings.js"></script>
 		<script type="text/javascript" src="./Export/src/GameSourceExport.js"></script>
+		<script type="text/javascript" src="./Export/src/HeaderRenderer.js"></script>
+	  <script type="text/javascript" src="./Export/src/SetupRenderer.js"></script>
+	  <script type="text/javascript" src="./Export/src/CanvasPropertiesRenderer.js"></script>
+	  <script type="text/javascript" src="./Export/src/ResourcesRenderer.js"></script>
+	  <script type="text/javascript" src="./Export/src/GameNameRenderer.js"></script>
 		<script type="text/javascript" src="./Export/src/FactoriesRenderer.js"></script>
 		<script type="text/javascript" src="./Export/src/LevelsRenderer.js"></script>
 		<script type="text/javascript" src="./Export/src/FooterRenderer.js"></script>
