Added empty game and trying to work out bugs when creating game from scratch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		  indexDebug = true;
 		</script>
 		
+		<!-- If you add anything here don't forget to add it on CangatooBoot include -->
+		
 		<script type="text/javascript" src="./GameBasis/src/GameLoader.js"></script>
 		<script type="text/javascript" src="./GameBasis/src/Resources.js"></script>
 		<script type="text/javascript" src="./GameBasis/src/Element.js"></script>
@@ -35,6 +37,7 @@
 		<script type="text/javascript" src="./Export/src/IncludesRenderer.js"></script>
 		
 		<script type="text/javascript" src="./Demos/BouncingBalls.js"></script>
+		<script type="text/javascript" src="./Demos/EmptyGame.js"></script>
 		
 		<!-- Boot debug END  -->
 		
