--- a/war/Cangatoo.html
+++ b/war/Cangatoo.html
@@ -11,7 +11,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="Cangantoo.css">
+    <link type="text/css" rel="stylesheet" href="Cangatoo.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -23,7 +23,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="cangantoo/cangantoo.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="cangatoo/cangatoo.nocache.js"></script>
   </head>
 
   <!--                                           -->
