--- a/war/Cangatoo.html
+++ b/war/Cangatoo.html
@@ -44,7 +44,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>TEST</h1>
 
     <table align="center">
       <tr>
